--- a/web/DockerShellHost.csproj
+++ b/web/DockerShellHost.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Docker.DotNet" Version="3.125.15" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
-    <PackageReference Include="SharpCompress" Version="0.42.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\sdk\src\CodePod.Sdk\CodePod.Sdk.csproj" />
   </ItemGroup>
 
 </Project>
