--- a/sdk/src/CodePod.Sdk/CodePod.Sdk.csproj
+++ b/sdk/src/CodePod.Sdk/CodePod.Sdk.csproj
@@ -13,6 +13,9 @@
     <PackageReference Include="Docker.DotNet" Version="3.125.15" />
     <PackageReference Include="SharpCompress" Version="0.38.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
