--- a/sdk/test/CodePod.Sdk.Tests/CodePod.Sdk.Tests.csproj
+++ b/sdk/test/CodePod.Sdk.Tests/CodePod.Sdk.Tests.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
