--- a/CodePod.Sdk.Tests/CodePod.Sdk.Tests.csproj
+++ b/CodePod.Sdk.Tests/CodePod.Sdk.Tests.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\CodePod.Sdk\CodePod.Sdk.csproj" />
+    <ProjectReference Include="..\CodePod.Sdk\CodePod.Sdk.csproj" />
   </ItemGroup>
 
   <ItemGroup>
